# jupyter-ai-openaicompatible

./: LICENSE  README.md  pyproject.toml
jupyter_ai_openaicompatible/: provider.py
jupyter_ai_openaicompatible/tests/: __init__.py
