[build-system]
requires = ["hatchling>=1.4.0", "jupyterlab~=4.0"]
build-backend = "hatchling.build"

[project]
name = "jupyter_ai_openaicompatible"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
version = "0.1.0"
description = "A Jupyter AI extension."
authors = [
    { name = "Alan Meeson", email = "am@carefullycalculated.co.uk" },
]
dependencies = ["jupyter_ai", "langchain_openai"]

[project.optional-dependencies]
test = ["coverage", "pytest", "pytest-asyncio", "pytest-cov"]

[project.entry-points."jupyter_ai.model_providers"]
openai-compatible = "jupyter_ai_openaicompatible.provider:OpenAICompatibleProvider"
openai-chat-compatible = "jupyter_ai_openaicompatible.provider:ChatOpenAICompatibleProvider"

[project.entry-points."jupyter_ai.embeddings_model_providers"]
openai-compatible = "jupyter_ai_openaicompatible.provider:OpenAIEmbeddingsProvider"

[tool.hatch.build.hooks.version]
path = "jupyter_ai_openaicompatible/_version.py"

[tool.check-wheel-contents]
ignore = ["W002"]
